[package]
name = "multi_horizon"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = { version = "*" }
open = { version = "*" }
junction = { version = "*" }

[dependencies.cursive]
version = "*"
default-features = false
features = ["crossterm-backend"]


[build-dependencies]
winres = { version = "*" }